Fixed depreciated code